test/typeCheckTest/fail/test38.ic
class BadWhileCond {
	int getInt () {
		return 6;
	}
	
	void main (string [] args) {
		while (getInt()) {
			Library.println("what???");
		}
	}
}